[package]
name = "gillespy"
version = "0.1.0"
edition = "2021"

[lib]
name = "gillespy"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
rand = "0.8.4"
